--- a/bp_app/templates/_navbar.html
+++ b/bp_app/templates/_navbar.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
-        <a class="navbar-brand" href="/">324-aplication</a>
+        <a class="navbar-brand" href="/">Grupo Scout Baden Powell 324</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -16,13 +16,14 @@
                 <li class="nav-item">
 
                 </li>
+                <a class="nav-link" href="/Actividades/listado">Listado Actividades</a>
 
                 <li class="nav-item">
 
                 </li>
+                <a class="nav-link" href="/Actividades/crear">Crear Actividades</a>
 
                 <li class="nav-item">
-                    <a class="nav-link" href="/Actividades">ActividadesDB</a>
                 </li>
 
                 <li class="nav-item">
