--- a/accessAplication/templates/signin.html
+++ b/accessAplication/templates/signin.html
@@ -1,9 +1,54 @@
 {% extends 'base.html' %} {% block content %}
 
 <h1>Acceso a la aplicación</h1>
-<form action="/signin" method="POST">
-    {%csrf_token%} {{form.as_p}}
-    <button>signin</button>
-</form>
 
-{{error}} {%endblock%}
+
+<main class="container">
+
+    <div class="row">
+
+        <div class="col-md-4 offset-md-4 mt-5">
+            <form method="POST" class="card card-body ">
+                <h1 class="text-center">Página de acceso a la aplicación </h1>
+
+                {% csrf_token %}
+
+                <!--
+                Formulario heredado para la clase
+                <form action="/signin" method="POST">
+                    {%csrf_token%} {{form.as_p}}
+                    <button>signin</button>
+                </form>
+                 -->
+
+                <div class="mb-3">
+                    <label for="username">Username:</label>
+                    <input type="text" name="username" id="username" class="form-control" placeholder="Ingrese su usuario">
+                </div>
+                <div class="mb-3">
+                    <label for="password">Password:</label>
+                    <input type="password" name="password" id="password" class="form-control" placeholder="Ingrese su contraseña. Debe ser segura">
+                </div>
+
+
+
+                <button class="btn btn-primary">
+                Acceso a la apliación
+                </button>
+                </br>
+                {{error}}
+            </form>
+        </div>
+    </div>
+
+</main>
+
+
+
+
+
+
+
+
+
+{%endblock%}
