--- a/accessAplication/templates/home.html
+++ b/accessAplication/templates/home.html
@@ -7,9 +7,8 @@
         <h2 class="text-center"> {{grupo}}</h2>
 
         <div class="text-center">
-            <a class="btn btn-secondary" href="/signin"> Ingresar</a>
-            <a class="btn btn-dark" href="/logout"> Salir</a>
-
+            {% if not user.is_authenticated %}<a class="btn btn-secondary" href="/signin"> Acceso</a> {%endif%}{% if user.is_authenticated %}
+            <a class="btn btn-dark" href="/logout"> Salir</a> {%endif%}
 
         </div>
     </section>
