--- a/bp_app/templates/_navbar.html
+++ b/bp_app/templates/_navbar.html
@@ -27,16 +27,18 @@
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" href="/logout">Logout</a>
+                    <a class="nav-link" style="color:#8685e7" href="/logout">Salir -- {{user}}</a>
                 </li>
+
+
 
                 {% else %}
                 <li class="nav-item">
-                    <a href="/signin" class="nav-link">Login</a>
+                    <a href="/signin" class="nav-link">Acceso</a>
                 </li>
 
                 <li class="nav-item">
-                    <a href="/signup" class="nav-link">Register</a>
+                    <a href="/signup" class="nav-link">Registro</a>
                 </li>
                 {% endif %}
             </ul>
